<resources>
    <string name="app_name">RainforestCoffee</string>
    <string name="where_every_cup_is_an_adventure">where every cup is an adventure</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_underline"><u>Register</u></string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="account_created">Account Created</string>
    <string name="cannot_create_account">Cannot create account</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_ll_send_you_the_reset_password_link_to_your_email">We\'ll send you the reset password link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="reset_link_was_sent_to_your_email">Reset link was sent to your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="promo_deals">Promo Deals</string>
    <string name="best_products">Best Products</string>
    <string name="iced_latte">Iced Latte</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="see_menu">See menu</string>
    <string name="croissant">Croissant</string>
    <string name="bestsellers">BestSellers</string>
</resources>