<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.View.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_blur"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <TextView
            android:id="@+id/letsRegisterTv"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_register"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:id="@+id/letsRegisterDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/letsRegisterTv"
            style="@style/h2"
            android:textColor="@color/g_black"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/loginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/letsRegisterDesc"
            app:layout_constraintTop_toBottomOf="@+id/letsRegisterTv"
            style="@style/h2"
            android:textColor="@color/g_black"
            android:text="@string/login_underline"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/letsRegisterDesc"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/g_gray500"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/g_gray500"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/gmailEditTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/g_gray500"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/passEditTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/gmailEditTv"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/password"
            android:textColor="@color/g_gray500"
            android:inputType="numberPassword"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            style="@style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/passEditTv"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:padding="12dp"
            android:text="@string/register"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebookBtn"
            style="@style/Widget.Button.SSO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:padding="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/facebookBtn"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn"
            android:src="@drawable/facebook_icon"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleBtn"
            style="@style/Widget.Button.SSO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/continue_with_google"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/facebookBtn"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:padding="12dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/googleBtn"
            app:layout_constraintTop_toBottomOf="@+id/facebookBtn"
            android:src="@drawable/google_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>