<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blur_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <TextView
            android:id="@+id/letsLoginTv"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_login"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <TextView
            android:id="@+id/letsLoginDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/letsLoginTv"
            style="@style/h2"
            android:textColor="@color/g_black"
            android:text="@string/don_t_have_an_account_register_now"/>

        <EditText
            android:id="@+id/gmailEditTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/letsLoginDesc"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/g_gray500"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/passEditTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/gmailEditTv"
            style="@style/editText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/password"
            android:textColor="@color/g_gray500"
            android:inputType="numberPassword"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/forgotPassTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/passEditTv"
            style="@style/h2"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/g_black"
            android:text="@string/forgot_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/letsLoginBtn"
            style="@style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassTv"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:padding="12dp"
            android:text="@string/login"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/facebookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/letsLoginBtn"
            android:src="@drawable/facebook_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="@color/white_smoke"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="@+id/facebookBtn"
            app:layout_constraintEnd_toEndOf="@+id/facebookBtn"
            app:layout_constraintTop_toTopOf="@+id/facebookBtn"
            app:layout_constraintBottom_toBottomOf="@+id/facebookBtn" />

        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_background"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/letsLoginBtn"
            android:src="@drawable/google_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:textColor="@color/white_smoke"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="@+id/googleBtn"
            app:layout_constraintEnd_toEndOf="@+id/googleBtn"
            app:layout_constraintTop_toTopOf="@+id/googleBtn"
            app:layout_constraintBottom_toBottomOf="@+id/googleBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>