<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingTop="6dp"
        android:background="@drawable/bg_corner_10">
    </RelativeLayout>

    <TextView
        android:id="@+id/resetPassTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/reset_password"
        android:textColor="@color/g_black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resetPassDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/we_ll_send_you_the_reset_password_link_to_your_email"
        android:textColor="@color/g_black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/resetPassTv"
        app:layout_constraintTop_toBottomOf="@+id/resetPassTv"/>

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="@+id/resetPassDesc"
        app:layout_constraintStart_toStartOf="@+id/resetPassDesc"
        app:layout_constraintTop_toBottomOf="@+id/resetPassDesc"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/passEditText"
        app:layout_constraintStart_toStartOf="@+id/passEditText"
        app:layout_constraintTop_toBottomOf="@+id/passEditText">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/white_background"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_primary_button"
            android:text="@string/send"
            android:textAllCaps="false"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>