<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_blur"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_rf"
            android:layout_width="250dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="330dp"
            android:src="@drawable/logo_rainforest_cp"/>

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/logo_rf"
            app:layout_constraintEnd_toEndOf="@+id/logo_rf"
            app:layout_constraintTop_toBottomOf="@+id/logo_rf"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/where_every_cup_is_an_adventure"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="140dp"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toBottomOf="@+id/text_desc"
            app:layout_constraintStart_toStartOf="@+id/text_desc"
            app:layout_constraintEnd_toEndOf="@+id/text_desc"
            android:padding="12dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="140dp"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            android:padding="12dp"
            android:textAlignment="center"
            android:text="@string/register"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>